--- a/Skyblock Economics Calculator Official CLI/Skyblock Economics Calculator Official CLI.csproj
+++ b/Skyblock Economics Calculator Official CLI/Skyblock Economics Calculator Official CLI.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>Skyblock_Economics_Calculator_Official_CLI</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="bin\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <None Remove="bin\**" />
+  </ItemGroup>
+
 </Project>
